# qna-agent-poc

./: .dockerignore  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  paths.py  pyproject.toml  requirements.txt  ruff.toml
api/: app.py  logger.py  modules.py
api/chat/: chat_service.py  models.py  openai_llm.py  prompt_builder.py  router.py
api/health/: router.py
api/shared/: configs.py
api/vector/: store.py  text_preprocessor.py
tests/chat/: steps.py  test_chat.py
tests/data/: test_data.json
tests/health/: test_health.py
tests/infrastructure/: steps.py
tests/vector/: steps.py  test_text_preprocessor.py  test_vector_store.py
tools/scraping/: reading_robot.py  scraper.py
